--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <input type="file" id="file-input">
+    <input type="file">
     <br />
     <div id="viewer-container"></div>
     <script src="./bundle.js"></script>
